--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -336,10 +336,11 @@ Control Room Log Edit
             function initMap() {
                 var map = new google.maps.Map(document.getElementById('logMap'), {
                     zoom: 17,
-                    center: {lat: 51.379300, lng: -2.32700},
+                    //center: {lat: 51.379300, lng: -2.32700},
+                    {{ set latLongArray = entry.event.event_lat_long|split(',') }}
+                    center: {lat: {{ latLongArray[0] }}, lng: {{ latLongArray[1] }}},
                     mapTypeId: 'satellite'
                 });
-                console.log({{ entry.event.event_lat_long }});
 
                 var bounds = new google.maps.LatLngBounds(
                     new google.maps.LatLng(51.37808, -2.32938),
