--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -337,8 +337,7 @@ Control Room Log Edit
                 var map = new google.maps.Map(document.getElementById('logMap'), {
                     zoom: 17,
                     //center: {lat: 51.379300, lng: -2.32700},
-                    {{ set latLongArray = entry.event.event_lat_long|split(',') }}
-                    center: {lat: {{ latLongArray[0] }}, lng: {{ latLongArray[1] }}},
+                    center: {lat: {{ eventLat }}, lng: {{ eventLong }}},
                     mapTypeId: 'satellite'
                 });
 
