--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -140,7 +140,7 @@ Event Entry Form
                                 </div>
                             </div>
                         </div><br>
-                        <div class="row">   
+                        <div class="row">
                             <div class="form-group">
                                 <div class="col-md-2">
                                     {{ form_label(form.overlay_image) }} 
@@ -151,6 +151,18 @@ Event Entry Form
                                 </div>
                             </div>
                         </div><br>
+                        {% if event.overlay_image is defined %}
+                            <div class="row">
+                                <div class="form-group">
+                                    <div class="col-md-2">
+                                        Current File:
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{ event.overlay_image) }}
+                                    </div>
+                                </div>
+                            </div><br>
+                        {% endif %}
                         <div class="row">  
                             <div class="col-md-8">
                                 {% if event.id is defined %}
