fixed error in event twig file

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -158,7 +158,7 @@ Event Entry Form
                                         Current File:
                                     </div>
                                     <div class="col-md-6">
-                                        {{ event.overlay_image) }}
+                                        {{ event.overlay_image }}
                                     </div>
                                 </div>
                             </div><br>
