Modified event twig

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -151,11 +151,11 @@ Event Entry Form
                                 </div>
                             </div>
                         </div><br>
-                        {% if current_overlay is defined %}
+                        {% if current_overlay %}
                             <div class="row">
                                 <div class="form-group">
                                     <div class="col-md-2">
-                                        Current File:
+                                        <strong>Current File:</strong>
                                     </div>
                                     <div class="col-md-6">
                                         {{ current_overlay }}
