debugging file upload

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -155,7 +155,7 @@ Event Entry Form
                             <div class="row">
                                 <div class="form-group">
                                     <div class="col-md-2">
-                                        <strong>Current File:</strong>
+                                        <strong>Current File: ({{ OriginalFilename }})</strong>
                                     </div>
                                     <div class="col-md-6">
                                         <a href='{{ path('overlay', {'filename': current_overlay}) }}'>{{ current_overlay }}</a>
