debugging overlay url

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -348,7 +348,7 @@ Control Room Log Edit
                     new google.maps.LatLng({{ SWbound }})
                 );
 
-                var srcImage = '{{ path('overlay', {'filename': overlayFileName}) }}';
+                var srcImage = '{{ url('overlay', {'filename': overlayFileName}) }}';
 
                 overlay = new EventSiteOverlay(bounds, srcImage, map);
 
