Added upload files to log entries

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -71,6 +71,15 @@ Control Room Log Edit
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                {{ form_label(log_entry.log_supportFile) }}
+                                                {{ form_errors(log_entry.log_supportFile) }}
+                                                {{ form_widget(log_entry.log_supportFile) }}
+                                            </div>
+                                        </div>
+                                    </div>
                                 {% else %}
                                     <div class="row">
                                         <div class="col-md-8">
@@ -107,7 +116,16 @@ Control Room Log Edit
                                                         {{ form_widget(log_entry.park_alert) }}
                                                     </div>
                                                 </div>
-                                            </div>        
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <div class="form-group">
+                                                        {{ form_label(log_entry.log_supportFile) }}
+                                                        {{ form_errors(log_entry.log_supportFile) }}
+                                                        {{ form_widget(log_entry.log_supportFile) }}
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="col-md-4">
                                             <br>
