--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -73,7 +73,14 @@ Control Room Log New Entry
                                         {{ form_label(log_entry.park_alert) }}
                                         {{ form_widget(log_entry.park_alert) }} 
                                         {{ form_errors(log_entry.park_alert) }}
-                                        
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        {{ form_errors(log_entry.log_supportFile) }}
+                                        {{ form_widget(log_entry.log_supportFile) }}
                                     </div>
                                 </div>
                             </div>
