--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -163,6 +163,19 @@ Event Entry Form
                                 </div>
                             </div><br>
                         {% endif %}
+                        <div class="row">   
+                            <div class="form-group">
+                                <div class="col-md-2">
+                                    {{ form_label(form.locations) }} 
+                                    {{ form_errors(form.locations) }}
+                                </div>
+                                <div class="col-md-4">
+                                    {% for location in form.locations %}
+                                        {{ form_widget(location) }} {{ form_label(location) }}<br>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div><br>
                         <div class="row">  
                             <div class="col-md-8">
                                 {% if event.id is defined %}
