--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -170,9 +170,11 @@ Event Entry Form
                                     {{ form_errors(form.locations) }}
                                 </div>
                                 <div class="col-md-4">
-                                    {% for location in form.locations %}
-                                        {{ form_widget(location) }} {{ form_label(location) }}<br>
-                                    {% endfor %}
+                                    <ul class="tags" data-prototype="{{ form_widget(form.tags.vars.prototype)|e('html_attr') }}">
+                                        {% for location in form.locations %}
+                                            {{ form_widget(location) }} {{ form_label(location) }}<br>
+                                        {% endfor %}
+                                    </ul>
                                 </div>
                             </div>
                         </div><br>
