--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -202,7 +202,8 @@ Event Entry Form
             allow_up: false,
             allow_down: false,
             allow_duplicate: false,
-            add_at_the_end: true
+            add_at_the_end: true,
+            name_prefix:  '{{ form.locations.vars.full_name }}'
         });
         
         $(function () {
