fixing location forms

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -167,7 +167,7 @@ Event Entry Form
                         <div class="row">   
                             <div class="form-group">
                                 <div class="col-md-2">
-                                    {{ form_row(form.locations}}
+                                    {{ form_row(form.locations)}}
                                 </div>
                             </div>
                         </div><br>
