--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}"/>
 <link rel="stylesheet" href="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css') }}" />
 <link rel="stylesheet" href="{{ asset('assets/vendor/easy-autocomplete/easy-autocomplete.min.css') }}" />
+<link rel="stylesheet" href="{{ asset('assets/vendor/jquery.themes/ui-lightness/jquery-ui.min.css') }}" media="screen">
 <style>
 .severity1 {
     background-color: #E50D00;
@@ -180,6 +181,7 @@
     <script type="text/javascript" src="{{ asset('assets/vendor/easy-autocomplete/jquery.easy-autocomplete.min.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/geolocator/2.1.0/geolocator.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0L5FuS1PZXDw90PINaMckDeQyIj_em1M"></script>
+    <script type="text/javascript"src="{{ asset('assets/vendor/jqueryui/jquery-ui.min.js') }}"></script>
     <script type="text/javascript">
     
         var alertData = null;
