--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -9,7 +9,7 @@ Event Entry Form
             <div class="wrapper">
                 <div class="row">
                     <div class="col-md-12">
-                        {% form_theme form 'AppBundle::jquery.collection.html.twig' %}
+                        {% form_theme form 'jquery.collection.html.twig' %}
                         {{ form_start(form) }}
                         <br>
                         <div class="row">
