--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -167,7 +167,13 @@ Event Entry Form
                         <div class="row">   
                             <div class="form-group">
                                 <div class="col-md-2">
-                                    {{ form_row(form.locations)}}
+                                    {{ form_label(form.locations)}}
+                                    {{ form_errors(form.locations)}}
+                                </div>
+                                <div class="col-md-6">
+                                    {% for location in form.locations %}
+                                        {{ form_widget(location) }} {{ form_label(location) }}<br>
+                                    {% endfor %}
                                 </div>
                             </div>
                         </div><br>
