collection form debug

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -172,7 +172,7 @@ Event Entry Form
                                 </div>
                                 <div class="col-md-6">
                                     {% for location in form.locations %}
-                                        {{ form_widget(location) }} {{ form_label(location) }}<br>
+                                        {{ form_row(location) }}<br>
                                     {% endfor %}
                                 </div>
                             </div>
