--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -203,7 +203,7 @@ Event Entry Form
             allow_down: false,
             allow_duplicate: false,
             add_at_the_end: true,
-            //name_prefix:  '{{ form.locations.vars.full_name }}'
+            name_prefix:  '{{ formbb.locations.vars.full_name }}'
         });
         
         $(function () {
