--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -171,7 +171,9 @@ Event Entry Form
                                     {{ form_errors(form.locations) }}
                                 </div>
                                 <div class="col-md-6">
-                                    {{ form_widget(form.locations) }}
+                                    <div class="row"> 
+                                        {{ form_widget(form.locations) }}
+                                    </div>
                                 </div>
                             </div>
                         </div><br>
