--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -106,6 +106,19 @@ Event Entry Form
                                 </div>
                             </div>
                         </div><br>
+                        <div class="row">
+                            <div class="form-group">
+                                <div class="col-md-2">
+                                    {{ form_label(form.event_venue) }}
+                                    {{ form_errors(form.event_venue) }}
+                                </div>
+                                <div class="col-md-6">
+                                    {% for venue in form.event_venue %}
+                                        {{ form_widget(venue) }} {{ form_label(venue) }}<br>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div><br>
                         <div class="row">   
                             <div class="form-group">
                                 <div class="col-md-2">
