--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-Control Room Log
+Control Room Log Map
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
@@ -8,91 +8,15 @@ Control Room Log
             <div class="wrapper">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4>Log Entries</h4>
+                        <h4>Event Log Map</h4>
                     </div>
                 </div>
                 <div class="row" id="logTable">
                     <div class="col-md-12">
-                        {% if logs is empty %}
-                            No logs available
+                        {% if event. is empty %}
+                            No map available
                         {% else %}
-                            <table class="table table-sm table-striped table-bordered table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Log Time</th>
-                                        <th>Log Title</th>
-                                        <th>Location</th>
-                                        <th>Reported By</th>
-                                        <th><br></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for log in logs %}
-                                        {% if log.park_alert and log.log_entry_open_time < date('-5minutes') and log.log_update_timestamp is null and log.security_entry_closed_time is null and log.medical_entry_closed_time is null and log.general_entry_closed_time is null and log.lost_property_entry_closed_time is null %}
-                                            <tr class="row_flash">
-                                        {% elseif log.park_alert and log.log_update_timestamp < date('-5minutes') and log.log_update_timestamp is not null and log.security_entry_closed_time is null and log.medical_entry_closed_time is null and log.general_entry_closed_time is null and log.lost_property_entry_closed_time is null %}
-                                            <tr class="row_flash">
-                                        {% else %}
-                                            <tr>
-                                        {% endif %}    
-                                            <td>
-                                                {% if log.log_update_timestamp is not null %}
-                                                    <div data-toggle="tooltip" data-placement="left" title="Updated: {{ log.log_update_timestamp|date('Y-m-d H:i:s', "Europe/London") }}">
-                                                {% endif %}
-                                                {{ log.log_entry_open_time|date('Y-m-d H:i:s', "Europe/London") }}
-                                                {% if log.log_update_timestamp is not null %}
-                                                    </div>
-                                                {% endif %}
-                                            </td>
-                                            <td><a href="{{ path('edit_entry', {'id': log.id}) }}">{{ log.log_blurb }}</a></td>
-                                            <td>{{ log.location }}</td>
-                                            <td>{{ log.reported_by }}</td>
-                                            <td>
-                                            {% if log.general_description is null %}
-                                            {% else %}
-                                                {% if log.general_entry_closed_time is not null %}
-                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
-                                                {% else %}
-                                                    <span class="label label-primary">
-                                                {% endif %}
-                                                {{ log.general_description[:30]|striptags ~ '...'  }}
-                                                </span> &nbsp;
-                                            {% endif %}
-                                            {% if log.medical_injury_description is null %}
-                                            {% else %}
-                                                {% if log.medical_entry_closed_time is not null %}
-                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.medical_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
-                                                {% else %}
-                                                    <span class="label severity{{ log.medical_severity }}">
-                                                {% endif %}
-                                                {{ log.medical_injury_description }}
-                                                </span> &nbsp;
-                                            {% endif %}
-                                            {% if log.security_description is null %}
-                                            {% else %}
-                                                {% if log.security_entry_closed_time is not null %}
-                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.security_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
-                                                {% else %}
-                                                    <span class="label severity{{ log.severity }}">
-                                                {% endif %}
-                                                {{ log.security_incident_description }}
-                                                </span> &nbsp;
-                                            {% endif %}
-                                            {% if log.lost_property_description is null %}
-                                            {% else %}
-                                                {% if log.lost_property_entry_closed_time is not null %}
-                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.lost_property_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
-                                                {% else %}
-                                                    <span class="label label-info">
-                                                {% endif %}
-                                                {{ log.lost_property_description[:20]|striptags ~ '...' }}
-                                                </span> &nbsp;
-                                            {% endif %}
-                                            </td> 
-                                        </tr>
-                                    {% endfor %}                           
-                                </tbody>
-                            </table>
+                            
                         {% endif %}  
                     </div>
                 </div>
@@ -133,12 +57,12 @@ Control Room Log
         });
         
         $(document).ready(function() {
-            tablePoll();
+            dataPoll();
         });
         
-        var oldTable;
+        var oldData;
         
-        function tablePoll(){
+        function dataPoll(){
             $.ajax({
                 type:'POST',
                 url: '{{ path('full_log_table') }}{% if app.request.get('sort') %}{{ app.request.get('sort') }}/{% endif %}{% if app.request.get('filter') %}{{ app.request.get('filter') }}/{% endif %}{% if app.request.get('filter_type') %}{{ app.request.get('filter_type') }}/{% endif %}',
